--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.docker
 /node_modules
 /public/hot
 /public/storage
@@ -10,4 +11,3 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.docker/*
